<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/icon_animated"
        android:layout_width="240dp"
        android:layout_height="240dp"
        app:lottie_rawRes="@raw/snow"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:padding="10dp"
        android:layout_marginBottom="-70dp"
        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="@+id/temp"
        app:layout_constraintStart_toStartOf="@+id/temp" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-30dp"
        android:text="@string/main_temp"
        android:textColor="@color/font_color"
        android:textSize="150sp"
        app:layout_constraintBottom_toTopOf="@+id/weather_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/background"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3,linearLayout4,linearLayout5,linearLayout6"
                app:flow_maxElementsWrap="3"
                app:flow_wrapMode="chain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/humidity" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/font_color"
                    android:text="00 %" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textColor="@color/font_color"
                    android:text="Humidity"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/wind" />

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/font_color"
                    android:text="0.00 m/s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textColor="@color/font_color"
                    android:text="Wind Speed"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/visibility" />

                <TextView
                    android:id="@+id/visibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/font_color"
                    android:text="00 Km" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textColor="@color/font_color"
                    android:text="Visibility"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/sunrise" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/font_color"
                    android:text="00:00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="Sunrise"
                    android:textColor="@color/font_color"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/font_color"
                    android:text="00:00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textColor="@color/font_color"
                    android:text="Sunset"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="80dp"
                android:layout_height="88dp"
                android:background="@drawable/background"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/sea" />

                <TextView
                    android:id="@+id/sea_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/font_color"
                    android:text="0000 hPa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textColor="@color/font_color"
                    android:text="Sea Level"
                    android:textSize="11sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temp"
        android:textColor="@color/font_color"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_condition"
        android:drawableLeft="@drawable/arrow_max" />

    <TextView
        android:id="@+id/min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp"
        android:textColor="@color/font_color"
        android:textSize="20sp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_condition"
        android:drawableLeft="@drawable/arrow_min" />

    <TextView
        android:id="@+id/weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/weather_condition"
        android:padding="0dp"
        android:includeFontPadding="false"
        android:textColor="@color/font_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/FrameLayout"
        app:layout_constraintEnd_toEndOf="@+id/temp"
        app:layout_constraintStart_toStartOf="@+id/temp" />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol"
        android:textSize="60sp"
        android:textColor="@color/font_color"
        app:layout_constraintStart_toEndOf="@+id/temp"
        app:layout_constraintTop_toTopOf="@+id/temp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/font_color"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/days"
        android:textColor="@color/font_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/font_color"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="14 Jan"
        android:textSize="17sp"
        android:textColor="@color/font_color"
        app:layout_constraintEnd_toEndOf="@+id/days"
        app:layout_constraintStart_toStartOf="@+id/days"
        app:layout_constraintTop_toBottomOf="@+id/days" />

</androidx.constraintlayout.widget.ConstraintLayout>